prompt+projects ids refactor
